4.oct (ws)
      - fix to copy/paste of tuplets
      - fixes for note entry mode: makeGap() can now remove tuplets
      - fix crash when drag&drop a picture from external browser to symbol palette
      - fix: crash when deleted symbol inserted
3.oct (ws)
      - removed alsa midi output
      - added jack midi output
1.oct (ws)
      - new command: repeat selection: copies current selection and paste it to the
        end of the current selection. Reassigned the shortcut "R" to this command
        (was: repeat last command, which is not that useful)
      (la)
      - More work on swing. First 8th is lenghtened.
       Second 8th of a group is shortened and shifted.
30.sep (ws)
      - implement copy/paste slurs
      - make "add bracket" undoable
      - fix glissando font size
      - dont show slurs which start in invisible Measure/Staff
      - make changing of MStaff properties undoable
      (la)
      - fix "Mixer only works for first instrument"
      - fix "Instrument sounds not imported from MusicXML"
29.sep (ws)
      - fix boundingRectangle of segno and coda symbols
      - fix: Measure repeat sign always on top when dragged from palette
      - fix capella import crash
      - hack to fix MusicXml export of drum clef
       (la)
      - add support for unpitched percussion in MusicXML export
      - add support for invisible rest/note in MusicXML export
28.sep (ws)
      - fix: in shortcut editor check conflicts against local changed shortcuts
      - fix: add hardcoded F1 shortcut to shortcut editor
      - fix: "Change time signature for single measure"
      - fix: Key signatures do not include natural signs if added in reverse order
       (la)
      - add first support for swing playback
27.sep (ws)
      - change implementation of pitch up/down functions: "up" uses always sharps and
        "down" flats instead of guessing the right pitch spelling
      - add two new functions for note edit mode: "q" reduces the duration of